[metadata]
# replace with your username:
name = simple-fbmessenger
version = 0.0.dev1
author = Soenke Huster
author_email = projects@eknoes.de
description = Unofficial simple library to provide basic communication with Facebooks Messenger API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eknoes/simple-fbmessenger
project_urls =
    Bug Tracker = https://github.com/eknoes/simple-fbmessenger/issues
    Source = https://github.com/eknoes/simple-fbmessenger
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Communications :: Chat
    Topic :: Internet
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
python_requires=>=3.6
install_requires =
    aiohttp<4.0

[options]
packages = find:
python_requires = >=3.6